fixed scrollbars on both trades and calendar

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -9,6 +9,7 @@
   margin-left:10px;
   padding-left:6px;
 
+
   text-align: right;
 
   background-color: white;
@@ -37,8 +38,8 @@
 
   #calendar_panel {
 
+    height:80vh;
     padding-top:10px;
-    padding-bottom:30px;
   
   }
 
