--- a/css/globals.css
+++ b/css/globals.css
@@ -99,7 +99,8 @@
 /* The sidepanel menu */
 .trades_side {
 
-  height: 100%;   
+  height: 91vh;
+
   width: max-content; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 900; /* Stay on top */
@@ -108,7 +109,9 @@
   left: 0;
  
   overflow-x: hidden; 
-  overflow-y: hidden; 
+  overflow-y: hidden;
+  
+  padding-right:0px;
 
   background-color: var(--LEEDZ_GRAY);
   border-right: 2px solid lightgray;
@@ -125,19 +128,6 @@
 
 
 
-
-.closebtn {
-
-  font-size: 50px;
-  font-weight:600;
-  cursor: pointer;
-  color: green;
-
-  margin-top:0px;
-  margin-left:0;
-
-  
-}
 
 
 .openbtn {
