--- a/css/styles_med.css
+++ b/css/styles_med.css
@@ -24,8 +24,8 @@
     #open_side_btn {
       visibility:visible;
       left:0;
-     font-size:20px;
-     padding: 10px 15px;
+     font-size:18px;
+     padding: 10px;
 
 
     }
