--- a/css/styles_sm.css
+++ b/css/styles_sm.css
@@ -35,8 +35,9 @@
     #open_side_btn {
      visibility:visible;
      left:0;
-    font-size: small;
-    padding:10px;
+     font-size:18px;
+     padding: 10px;
+
     }
 
 
