--- a/css/trades.css
+++ b/css/trades.css
@@ -10,7 +10,7 @@
   #trades_column {
 
     z-index:300;
-    
+
     display: flex;
     flex-direction: column;
 
@@ -31,26 +31,30 @@
   
       width:auto;
       min-width: 60px;
-      height: 100%;
+
+      height:80vh;
 
       line-height: 1.6em;
-      padding-bottom: 25px;
+      padding-bottom: 10px;
       padding-left:10px;
       padding-right:0px;
 
-
+      overflow-x: hidden;
+      overflow-y: auto !important; 
+     
     }
     
   
   
     #trades_list {
-  
-      padding-right:10px;
+      
+      
+      padding-right:14px;
 
       list-style-type: none;
       
       overflow-x: hidden; 
-      overflow-y: scroll !important; 
+      overflow-y: hidden;
     }
 
     
